// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`compileFilter $between should compile $between on decimal field with $expr 1`] = `
{
  "$and": [
    {
      "$expr": {
        "$gte": [
          {
            "$toDouble": "$price",
          },
          10.5,
        ],
      },
    },
    {
      "$expr": {
        "$lte": [
          {
            "$toDouble": "$price",
          },
          99.9,
        ],
      },
    },
  ],
}
`;

exports[`compileFilter $between should compile $between to $gte + $lte 1`] = `
{
  "age": {
    "$gte": 18,
    "$lte": 65,
  },
}
`;

exports[`compileFilter $has with multiple keys should compile $has with multiple key-value pairs as $and 1`] = `
{
  "$and": [
    {
      "data.a": 1,
    },
    {
      "data.b": 2,
    },
  ],
}
`;

exports[`compileFilter $isNull should compile $isNull false to $ne null 1`] = `
{
  "name": {
    "$ne": null,
  },
}
`;

exports[`compileFilter $isNull should compile $isNull true to $eq null 1`] = `
{
  "name": {
    "$eq": null,
  },
}
`;

exports[`compileFilter $like and $ilike should convert $ilike to case-insensitive $regex 1`] = `
{
  "name": {
    "$options": "i",
    "$regex": "^.*foo.*$",
  },
}
`;

exports[`compileFilter $like and $ilike should convert $like with both wildcards to $regex 1`] = `
{
  "name": {
    "$regex": "^.*foo.*$",
  },
}
`;

exports[`compileFilter $like and $ilike should convert $like with leading wildcard to $regex 1`] = `
{
  "name": {
    "$regex": "^.*foo$",
  },
}
`;

exports[`compileFilter $like and $ilike should convert $like with trailing wildcard to $regex 1`] = `
{
  "name": {
    "$regex": "^foo.*$",
  },
}
`;

exports[`compileFilter $like and $ilike should convert $like with underscore wildcard 1`] = `
{
  "name": {
    "$regex": "^fo.$",
  },
}
`;

exports[`compileFilter $regex should compile $regex from RegExp instance 1`] = `
{
  "name": {
    "$options": "i",
    "$regex": "^foo",
  },
}
`;

exports[`compileFilter $regex should compile $regex from string 1`] = `
{
  "name": {
    "$regex": "^foo",
  },
}
`;

exports[`compileFilter PK field mapping should map PK field to _id 1`] = `
{
  "_id": "abc-123",
}
`;

exports[`compileFilter PK field mapping should map PK with operator to _id 1`] = `
{
  "_id": {
    "$eq": "abc-123",
  },
}
`;

exports[`compileFilter comparison operators should compile $eq 1`] = `
{
  "name": {
    "$eq": "foo",
  },
}
`;

exports[`compileFilter comparison operators should compile $gt 1`] = `
{
  "age": {
    "$gt": 18,
  },
}
`;

exports[`compileFilter comparison operators should compile $gte 1`] = `
{
  "age": {
    "$gte": 18,
  },
}
`;

exports[`compileFilter comparison operators should compile $in 1`] = `
{
  "name": {
    "$in": [
      "foo",
      "bar",
    ],
  },
}
`;

exports[`compileFilter comparison operators should compile $lt 1`] = `
{
  "age": {
    "$lt": 65,
  },
}
`;

exports[`compileFilter comparison operators should compile $lte 1`] = `
{
  "age": {
    "$lte": 65,
  },
}
`;

exports[`compileFilter comparison operators should compile $ne 1`] = `
{
  "name": {
    "$ne": "foo",
  },
}
`;

exports[`compileFilter comparison operators should compile $nin 1`] = `
{
  "name": {
    "$nin": [
      "foo",
      "bar",
    ],
  },
}
`;

exports[`compileFilter complex predicates should compile $all 1`] = `
{
  "tags": {
    "$all": [
      "a",
      "b",
    ],
  },
}
`;

exports[`compileFilter complex predicates should compile $contained 1`] = `
{
  "$and": [
    {
      "tags": {
        "$not": {
          "$elemMatch": {
            "$nin": [
              "a",
              "b",
              "c",
            ],
          },
        },
      },
    },
    {
      "tags": {
        "$exists": true,
      },
    },
  ],
}
`;

exports[`compileFilter complex predicates should compile $has with non-object value (array element check) 1`] = `
{
  "tags": "foo",
}
`;

exports[`compileFilter complex predicates should compile $has with object value 1`] = `
{
  "data.key": "value",
}
`;

exports[`compileFilter complex predicates should compile $length 1`] = `
{
  "tags": {
    "$size": 3,
  },
}
`;

exports[`compileFilter complex predicates should compile $overlap 1`] = `
{
  "tags": {
    "$in": [
      "a",
      "b",
    ],
  },
}
`;

exports[`compileFilter decimal field comparisons should use $expr + $toDouble for $gt on decimal field 1`] = `
{
  "$expr": {
    "$gt": [
      {
        "$toDouble": "$price",
      },
      10.5,
    ],
  },
}
`;

exports[`compileFilter decimal field comparisons should use $expr + $toDouble for $lte on decimal field 1`] = `
{
  "$expr": {
    "$lte": [
      {
        "$toDouble": "$price",
      },
      99.9,
    ],
  },
}
`;

exports[`compileFilter empty and edge cases should handle undefined value as null 1`] = `
{
  "name": null,
}
`;

exports[`compileFilter empty and edge cases should return empty filter for empty criteria 1`] = `{}`;

exports[`compileFilter field name mapping should use metadata name for mapped fields 1`] = `
{
  "email_address": "test@example.com",
}
`;

exports[`compileFilter logical operators should compile $and 1`] = `
{
  "$and": [
    {
      "name": "foo",
    },
    {
      "age": {
        "$gt": 18,
      },
    },
  ],
}
`;

exports[`compileFilter logical operators should compile $or 1`] = `
{
  "$or": [
    {
      "name": "foo",
    },
    {
      "name": "bar",
    },
  ],
}
`;

exports[`compileFilter logical operators should compile nested $and and $or 1`] = `
{
  "$and": [
    {
      "$or": [
        {
          "name": "foo",
        },
        {
          "name": "bar",
        },
      ],
    },
    {
      "age": {
        "$gte": 18,
      },
    },
  ],
}
`;

exports[`compileFilter simple equality should compile direct value equality 1`] = `
{
  "name": "foo",
}
`;

exports[`compileFilter simple equality should compile multiple field equality 1`] = `
{
  "age": 25,
  "name": "foo",
}
`;

exports[`compileFilter simple equality should compile null value 1`] = `
{
  "name": null,
}
`;

exports[`compileFilter simple equality should compile numeric equality 1`] = `
{
  "age": 25,
}
`;
